--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "crypto-js": "^3.1.9-1",
     "eosjs": "^20.0.0-beta2.2",
+    "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "^2.1.2",
@@ -14,6 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -23,5 +26,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage":"https://event.eosknights.io"
+  "homepage": "https://bada-studio.github.io/event/"
 }
