--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://event.eosknights.io"
+  "homepage": "https://bada-studio.github.io/"
 }
