--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "^2.1.2",
     "scatterjs-core": "^2.7.16",
     "scatterjs-plugin-eosjs": "^1.5.1",
