--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-s-alert": "^1.4.1",
-    "react-scripts": "^2.1.2",
+    "react-scripts": "^3.0.0",
     "scatterjs-core": "^2.7.16",
     "scatterjs-plugin-eosjs": "^1.5.1",
     "semantic-ui-css": "^2.4.1",
@@ -30,5 +30,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://k2shop.biscuitlabs.io/"
+  "homepage": "https://event.eosknights.io/"
 }
